@@ -20,6 +20,9 @@ PHP                                                                        NEWS
     without invoking the date parser. (Scott)
   * date_timestamp_get() / DateTime::getTimestamp() to retrieve the Unix
     timestamp belonging to a date object.
+  * two optional parameters to timezone_transitions_get() /
+    DateTimeZone::getTranstions() to limit the range of transitions being
+    returned.
 
 - Added ability to store associative infor with objects in SplObjectStorage.
   (Marcus)
